.workspace-data/cache/repo-33e59f1f5d53b03b/crates/next-custom-transforms/tests/errors/server-actions/server-graph/28/output.js
export async function foo() {
    return 'data';
}
export async function bar() {
    return 'data';
}
export async function baz() {
    return 'data';
}
export async function qux() {
    return 'data';
}
export async function quux() {
    return 'data';
}
